Leo issues addressed

--- a/src/modules/email-banner/two-column/templates/template.html
+++ b/src/modules/email-banner/two-column/templates/template.html
@@ -9,7 +9,7 @@
 			<table style="width: 100%;" cellpadding="0px" role="presentation">
 				<tr class="layout_two-column">
 					<td style="" class="column margin-b-16">
-						<h1>Factor Report</h1>
+						<h1 class="sans">Factor Report</h1>
 						<br>
 						<p>Monthly analysis of global<br/> market factors</p>
 						<br>
