--- a/src/modules/logo-banners/templates/template.html
+++ b/src/modules/logo-banners/templates/template.html
@@ -6,7 +6,7 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content">
-			<img src='@@imgBase/@@imgSrc' alt="Lazard Asset Management Logo" height="36" />
+			<img src='@@imgBase/@@imgSrc' alt="Lazard Asset Management" height="36" />
 		</td>
 		<td class="frame"></td>
 	</tr>
