--- a/src/modules/one-column-contents/shift-right/templates/template.html
+++ b/src/modules/one-column-contents/shift-right/templates/template.html
@@ -12,7 +12,7 @@
 					<td class="column">
 						<p class="eyebrow"><span class="bullet">&bull;</span> <span class="label">What's Trending</span></p>
 						<br>
-						<h2>One chart you need to see</h2>
+						<h2 class="sans">One chart you need to see</h2>
 						<br>
 						<p class="paragraph-2">
 							<strong>Is Manufacturing Shifting from China to India?</strong>
