--- a/src/modules/tables/numbered/templates/template.html
+++ b/src/modules/tables/numbered/templates/template.html
@@ -8,14 +8,14 @@
 		<td class="content">
 			<p class="eyebrow"><span class="bullet">&bull;</span> <span class="label">What's Trending</span></p>
 			<br>
-			<h4>Top 3 highlights from May 2024.</h4>
+			<h4 class="sans">Top 3 highlights from May 2024.</h4>
 			<br>
 			<p class="paragraph-3">Top 3 highlights from May 2024.</p>
 			<br>
 			<table style="" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" class="highlights-table">
 				<tr class="bordered">
 					<td class="table-number">
-						<h3>01.</h3>
+						<h3 class="sans">01.</h3>
 					</td>
 					<td class="table-content">
 						<p>World equity markets rose 4%, recovering from April's decline.</p>
@@ -24,7 +24,7 @@
 				</tr>
 				<tr class="bordered">
 					<td class="table-number">
-						<h3>02.</h3>
+						<h3 class="sans">02.</h3>
 					</td>
 					<td class="table-content">
 						<p>Yield curves remained inverted in developed markets, with the exception of Japan and Australia.</p>
@@ -33,7 +33,7 @@
 				</tr>
 				<tr class="bordered">
 					<td class="table-number">
-						<h3>03.</h3>
+						<h3 class="sans">03.</h3>
 					</td>
 					<td class="table-content">
 						<p>World equity markets rose 4%, recovering from April's decline.</p>
@@ -42,7 +42,7 @@
 				</tr>
 				<tr class="bordered">
 					<td class="table-number">
-						<h3>04.</h3>
+						<h3 class="sans">04.</h3>
 					</td>
 					<td class="table-content">
 						<p>World equity markets rose 4%, recovering from April's decline.</p>
@@ -51,7 +51,7 @@
 				</tr>
 				<tr class="bordered">
 					<td class="table-number">
-						<h3>05.</h3>
+						<h3 class="sans">05.</h3>
 					</td>
 					<td class="table-content">
 						<p>Yield curves remained inverted in developed markets, with the exception of Japan and Australia.</p>
@@ -60,7 +60,7 @@
 				</tr>
 				<tr class="bordered">
 					<td class="table-number">
-						<h3>06.</h3>
+						<h3 class="sans">06.</h3>
 					</td>
 					<td class="table-content">
 						<p>World equity markets rose 4%, recovering from April's decline.</p>
