--- a/src/modules/three-column-contents/large-thumbnail/templates/template.html
+++ b/src/modules/three-column-contents/large-thumbnail/templates/template.html
@@ -9,7 +9,7 @@
 			<table style="width: 100%;" cellpadding="0" role="presentation">
 				<tr class="layout_four-column">
 					<td colspan="2" class="column">
-						<!-- <img src="@@imgBase/@@imgSrc" alt="GIFL Image" width="100%"> -->
+						<!-- <img src="@@imgBase/@@imgSrc" alt="GIFL Image" width="404px"> -->
 						<img src="https://placehold.co/264x264" alt="GIFL Image" width="264px" height="auto">
 						<p></p> <!-- Spacer <p> for MSO image margin -->
 						<br>
