--- a/src/modules/two-column-contents/full-content/templates/template.dark.html
+++ b/src/modules/two-column-contents/full-content/templates/template.dark.html
@@ -28,9 +28,14 @@
 						<p style="width: 193px;" class="d-block paragraph-2">From airports and cellphone towers to electricity networks and railways, infrastructure makes businesses and economies run. By investing in the publicly listed equity of companies that operate infrastructure.</p>
 						<br>
 
-						<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a target="_blank" href="https://lazard.com" class="link-2">Lazard US Offshore Fund Offerings</a></p>
-						<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a target="_blank" href="https://lazard.com" class="link-2">Lazard US Offshore Fund Offerings</a></p>
-						<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a target="_blank" href="https://lazard.com" class="link-2">Lazard US Offshore Fund Offerings</a></p>
+						<div class="mso_list">
+							<ul class="g_list" style="" align="left" type="disc">
+									<li class="link-2"><a target="_blank" href="https://lazard.com">Lazard US Offshore Fund Offerings</a></li>
+									<li class="link-2"><a target="_blank" href="https://lazard.com">Lazard US Offshore Fund Offerings</a></li>
+									<li class="link-2"><a target="_blank" href="https://lazard.com">Lazard US Offshore Fund Offerings</a></li>
+									<li class="link-2"><a target="_blank" href="https://lazard.com">Lazard US Offshore Fund Offerings</a></li>
+							</ul>
+						</div>
 						<br>
 
 						<h3 class="subheadline">Australia</h3>
@@ -92,9 +97,14 @@
 						<p style="width: 193px;" class="d-block paragraph-2">From airports and cellphone towers to electricity networks and railways, infrastructure makes businesses and economies run. By investing in the publicly listed equity of companies that operate infrastructure.</p>
 						<br>
 
-						<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a target="_blank" href="https://lazard.com" class="link-2">Lazard US Offshore Fund Offerings</a></p>
-						<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a target="_blank" href="https://lazard.com" class="link-2">Lazard US Offshore Fund Offerings</a></p>
-						<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a target="_blank" href="https://lazard.com" class="link-2">Lazard US Offshore Fund Offerings</a></p>
+						<div class="mso_list">
+							<ul class="g_list" style="" align="left" type="disc">
+									<li class="link-2"><a target="_blank" href="https://lazard.com">Lazard US Offshore Fund Offerings</a></li>
+									<li class="link-2"><a target="_blank" href="https://lazard.com">Lazard US Offshore Fund Offerings</a></li>
+									<li class="link-2"><a target="_blank" href="https://lazard.com">Lazard US Offshore Fund Offerings</a></li>
+									<li class="link-2"><a target="_blank" href="https://lazard.com">Lazard US Offshore Fund Offerings</a></li>
+							</ul>
+						</div>
 						<br>
 
 						<h3 class="subheadline">Australia</h3>
