--- a/src/modules/two-column-contents/strategy-card/templates/template.html
+++ b/src/modules/two-column-contents/strategy-card/templates/template.html
@@ -14,8 +14,9 @@
 					</td>
 					<td style="vertical-align: middle; width: 194px;" class="column" align="left">
 						<p class="paragraph-3">
-							Investors can now access Lazard's flagship Global Listed Infrastructure Fund as an exchange traded fund (ETF), using the ticker 'GIFL'. <br>
+							Investors can now access Lazard's flagship Global Listed Infrastructure Fund as an exchange traded fund (ETF), using the ticker 'GIFL'.
 						</p>
+						<br>
 						<p>
 							Explore the Lazard Global Listed
 						</p>
