--- a/src/modules/two-column-contents/title-left/templates/template.dark.html
+++ b/src/modules/two-column-contents/title-left/templates/template.dark.html
@@ -14,23 +14,25 @@
 					<td class="column">
 						<h2 class="subheadline">Emerging Markets Investment Grade Yields</h2>
 						<br>
-						<!-- <img style src="@@imgBase/@@imgSrc" alt="Feature Image" width="100%"> -->
+						<!-- <img style src="@@imgBase/@@imgSrc" alt="Feature Image" width="404px"> -->
 						<img style src="https://placehold.co/404x272" alt="Feature Image" width="404px" height="272">
 						<p></p> <!-- Spacer <p> for MSO image margin -->
 						<br>
-						<p class="disclaimer">
-							As of 26 October 2023 <br>
-							Sovereign: JPM EMBI Global Diversified IG; Corporate: JPM CEMBI Broad Diversified IG <br>
-							Source: Lazard, JP Morgan
-						</p>
+						<p class="disclaimer">As of 26 October 2023</p>
+						<p class="disclaimer">Sovereign: JPM EMBI Global Diversified IG; Corporate: JPM CEMBI Broad Diversified IG</p>
+						<p class="disclaimer">Source: Lazard, JP Morgan</p>
 						<br>
 						<p style="max-width: 390px;" class="paragraph-2">Rising US interest rates--and soaring Treasury yields--have done their part to rattle global economics. As the environment settles, we expect growth differentials to shift, creating a more positive backdrop for emerging markets debt and interesting investment opportunities for the asset class across the capital structure.</p>
 						<br>
 						
-						<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a target="_blank" href="https://lazard.com" class="link-2">Outlook on Emerging Markets</a></p>
-						<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a target="_blank" href="https://lazard.com" class="link-2">Outlook on Europe</a></p>
-						<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a target="_blank" href="https://lazard.com" class="link-2">Outlook on Japan</a></p>
-						<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a target="_blank" href="https://lazard.com" class="link-2">Outlook on the United Kingdom</a></p>
+						<div class="mso_list">
+							<ul class="g_list" style="" align="left" type="disc">
+									<li class="link-2"><a target="_blank" href="https://lazard.com">Outlook on Emerging Markets</a></li>
+									<li class="link-2"><a target="_blank" href="https://lazard.com">Outlook on Europe</a></li>
+									<li class="link-2"><a target="_blank" href="https://lazard.com">Outlook on Japan</a></li>
+									<li class="link-2"><a target="_blank" href="https://lazard.com">Outlook on the United Kingdom</a></li>
+							</ul>
+						</div>
 						<br>
 						<!--
 							Component: Button
