--- a/src/templates/em-monitor.html
+++ b/src/templates/em-monitor.html
@@ -49,13 +49,11 @@
 								-->
 								<p class="eyebrow"><span class="bullet">&bull;</span> <span class="label">Emerging Market Monitor</span></p>
 								<br>
-								<h2>Is manufacturing shifting from China to India?</h2>
+								<h2 class="sans">Is manufacturing shifting from China to India?</h2>
 								<br>								
-								<p class="disclaimer">
-									As of 26 October 2023<br>
-									Sovereign: JPM EMBI Global Diversified IG; Corporate: JPM CEMBI Broad Diversified IG<br>
-									Source: Lazard, JP Morgan
-								</p>
+								<p class="disclaimer">As of 26 October 2023</p>
+								<p class="disclaimer">Sovereign: JPM EMBI Global Diversified IG; Corporate: JPM CEMBI Broad Diversified IG</p>
+								<p class="disclaimer">Source: Lazard, JP Morgan</p>
 								<br>
 								<p class="paragraph-2">As the United States and European Union increase tariffs on Chinese exports and China becomes more difficult for investors to navigate, companies may be looking to move production away from China to more attractive alternatives. While countries like Mexico, Poland, Vietnam, and Thailand vie for the top spot, India, with its young population and growing economy, might be leading the pack.</p>
 								<br>
@@ -102,7 +100,7 @@
 						<tr>
 							<td class="frame"></td>
 							<td class="content">
-								<h2>Explore a New Perspective on AI from Our Team</h2>
+								<h2 class="sans">Explore a New Perspective on AI from Our Team</h2>
 								<br>
 								<p class="paragraph-2">This paper explores the investment applications of small language models and their advantages over large language models.</p>
 								<br>
