--- a/src/templates/engage-lazard.html
+++ b/src/templates/engage-lazard.html
@@ -22,7 +22,7 @@
 						<tr>
 							<td class="frame"></td>
 							<td class="content">
-								<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_Logo_Transparent.png" alt="Lazard Asset Management Logo" height="36">
+								<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_Logo_Transparent.png" alt="Lazard Asset Management" height="36">
 							</td>
 							<td class="frame"></td>
 						</tr>
@@ -44,7 +44,7 @@
 								<table style border="0" cellpadding="8px" cellspacing="0" role="presentation" width="100%" class="layout_two-column_fluid">
 									<tr>
 										<td class="column">
-											<h1>Engage @ <br> Lazard</h1>
+											<h1 class="sans" style="width: 202px;">Engage @ Lazard</h1>
 											<br>
 											<h2 class="subheadline">New Ideas, New Perspectives.</h2>
 										</td>
@@ -87,13 +87,13 @@
 					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module dark cta-banner sapphire">
 						<tr>
 							<td class="frame"></td>
-							<td class="content alt h-flush">
-								<table style border="0" cellpadding="8px" cellspacing="0" role="presentation" width="100%" class="layout_two-column_fluid">
+							<td class="content h-flush">
+								<table style="width: 100%" border="0" cellpadding="8px" cellspacing="0" role="presentation" class="layout_two-column_fluid">
 									<tr>
-										<td class="column">
-											<h3 style="width: 404px">Introducing Lazard Global Listed Infrastructure Active ETF (Cboe: GIFL)</h3>
+										<td class="column" width="100%">
+											<h3 class="sans">Introducing Lazard Global Listed Infrastructure Active ETF (Cboe: GIFL)</h3>											
 										</td>
-										<td class="column align-right-md">
+										<td class="column">
 											<!--
 												Component: Pill Button
 												Variant: Primary, MSO Dark, Sapphire
@@ -103,9 +103,9 @@
 													style="height:32px;v-text-anchor:middle;color:#00539A;width:65px;" 
 													fillcolor="#ffffff">
 													<w:anchorlock/>
-													<center>
+													<center class="mso">
 											<![endif]-->
-											<a target="_blank" href="https://lazard.com/" style="width: 65px" class="btn pill">
+											<a target="_blank" href="https://lazard.com/" style="width: 65px" class="btn pill @@variant">
 												<!--[if !mso]><!--><span><!--<![endif]-->Visit<!--[if !mso]><!--></span><!--<![endif]-->
 											</a>
 											<!--[if mso]>
@@ -141,8 +141,9 @@
 										</td>
 										<td style="vertical-align: middle; width: 194px;" class="column" align="left">
 											<p class="paragraph-3">
-												Investors can now access Lazard's flagship Global Listed Infrastructure Fund as an exchange traded fund (ETF), using the ticker 'GIFL'. <br>
+												Investors can now access Lazard's flagship Global Listed Infrastructure Fund as an exchange traded fund (ETF), using the ticker 'GIFL'.
 											</p>
+											<br>
 											<p>
 												Explore the Lazard Global Listed
 											</p>
@@ -424,7 +425,7 @@
 								<table style border="0" cellpadding="8px" cellspacing="0" role="presentation" width="100%" class="layout_two-column_fluid">
 									<tr>
 										<td class="column">
-											<h2>Annual Sustainable Investment Report</h2>
+											<h2 class="sans">Annual Sustainable Investment Report</h2>
 										</td>
 										<td class="column">
 											<!--
@@ -473,7 +474,7 @@
 											<img src="https://placehold.co/54x74" alt="Table Thumbnail" width="54px" height="74px">
 										</td>
 										<td>
-											<h4>Annual Sustainable <br> Investment Report</h4>
+											<h4 class="sans" style="width: 165px;">Annual Sustainable Investment Report</h4>
 											<br>
 											<p>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
 											<br>
@@ -507,7 +508,7 @@
 											-->
 											<p class="eyebrow"><span class="bullet">&bull;</span> <span class="label">Fixed Income Viewpoints</span></p>
 											<br>
-											<h2>The Plot Thickens</h2>
+											<h2 class="sans">The Plot Thickens</h2>
 										</td>
 										<td class="column">
 											<!--
@@ -585,14 +586,12 @@
 								<h2 class="subheadline">Emerging Markets Investment Grade Yields</h2>
 								<br>
 								<!-- <img style src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_ContentImage_1YGraph.png" alt="1Y Grades Chart" class="mw-100" /> -->
-								<img src="https://placehold.co/543x304" alt="Feature Image" width="100%" height="auto">
+								<img src="https://placehold.co/543x304" alt="Feature Image" width="543" height="auto">
 								<p></p> <!-- Spacer <p> for MSO image margin -->
 								<br>
-								<p class="disclaimer">
-									As of 26 October 2023<br>
-									Sovereign: JPM EMBI Global Diversified IG; Corporate: JPM CEMBI Broad Diversified IG<br>
-									Source: Lazard, JP Morgan
-								</p>
+								<p class="disclaimer">As of 26 October 2023</p>
+								<p class="disclaimer">Sovereign: JPM EMBI Global Diversified IG; Corporate: JPM CEMBI Broad Diversified IG</p>
+								<p class="disclaimer">Source: Lazard, JP Morgan</p>
 							</td>
 							<td class="frame"></td>
 						</tr>
