--- a/src/templates/factor-report.html
+++ b/src/templates/factor-report.html
@@ -48,7 +48,7 @@
 				<td align="center">
 					@@include( "modules/cta-banner/two-column/templates/template.html", {
 						variant: "clarity",
-						heading: "<h2>Explore a New Perspective on AI from Our Team</h2>",
+						heading: "<h2 class='sans'>Explore a New Perspective on AI from Our Team</h2>",
 						paragraph: ""
 					} )
 				</td>
@@ -72,7 +72,7 @@
 											<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_Template_0216_V3_14.png" alt="Table Thumbnail">
 										</td>
 										<td>
-											<h4>Annual Sustainable <br> Investment Report</h4>
+											<h4 class="sans" style="width: 165px;">Annual Sustainable Investment Report</h4>
 											<br>
 											<p>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
 											<br>
@@ -93,7 +93,7 @@
 				<td align="center">
 					@@include( "modules/cta-banner/two-column/templates/template.dark.html", {
 						variant: "sapphire",
-						heading: "<h2>Explore a New Perspective on AI from Our Team</h2>",
+						heading: "<h2 class='sans'>Explore a New Perspective on AI from Our Team</h2>",
 						paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
 					} )
 				</td>
