--- a/src/templates/fixed-income-viewpoint.html
+++ b/src/templates/fixed-income-viewpoint.html
@@ -47,7 +47,7 @@
 								<table style border="0" cellpadding="8px" cellspacing="0" role="presentation" width="100%" class="layout_two-column_fluid">
 									<tr>
 										<td class="column" width="100%">
-											<h1 style="width: 263px;">Fixed Income Viewpoints</h1>
+											<h1 class="sans" style="width: 263px;">Fixed Income Viewpoints</h1>
 										</td>
 										<td class="column">
 											<!--
@@ -93,7 +93,7 @@
 								<table style="width: 100%;" cellpadding="8px" role="presentation">
 									<tr class="layout_mobile-one-column">
 										<td style="width: 104px" class="column">
-											<h3 class>Back on Track?</h3>
+											<h3 class="sans">Back on Track?</h3>
 										</td>
 										<td class="column">
 											<p>Three months of higher-than-expected US inflation, growth, and Treasury yields have wreaked damage in bond markets around the world.</p>
