--- a/src/templates/lazard-connect.html
+++ b/src/templates/lazard-connect.html
@@ -47,7 +47,7 @@
 								<table style border="0" cellpadding="8px" cellspacing="0" role="presentation" width="100%" class="layout_two-column_fluid">
 									<tr>
 										<td class="column" width="100%">
-											<h1>Lazard <br> Connect</h1>
+											<h1 class="sans" style="width: 165px;">Lazard Connect</h1>
 											<br>
 											<h2 class="subheadline">New Ideas, New Perspectives.</h2>
 										</td>
@@ -95,12 +95,12 @@
 								<table style="width: 100%;" role="presentation">
 									<tr class="layout_three-column">
 										<td style="width: 107px;" class="column">
-											<h3>What's trending</h3>
+											<h3 class="sans">What's trending</h3>
 											<br>
 											<p class="paragraph-2">The latest market commentary from our thought leaders.</p>
 										</td>
 										<td class="column">
-											<h4>In praise of small language models</h4>
+											<h4 class="sans">In praise of small language models</h4>
 											<br>
 											<p class="paragraph-2">The global outlook has brightened in 2024 despite some disappointing news along the way. Ronald Temple, Chief Market Strategist, analyzes the forces that stand to impact global markets as the second half of 2024 unfolds, including the results of a razor's-edge US election, China's ongoing housing challenges, and potential Eurozone policy easing.</p>											
 											<br>
@@ -196,7 +196,7 @@
 											<br>										
 										</td>
 										<td class="column">
-											<h4>In praise of small language models</h4>
+											<h4 class="sans">In praise of small language models</h4>
 											<br>
 											<p class="paragraph-2">Large language models (LLMs) are progressing at breakneck speed, captivating investors and sweeping through markets. However, their tendency to hallucinate and their inherent opacity limit their utility for investment decisions. Small language models (SLMs), in contrast, offer reliability and interpretability. These qualities make SLMs especially well-suited for answering highly specific questions, as this paper demonstrates using a case study on China's housing market slowdown.</p>
 										</td>
@@ -224,12 +224,12 @@
 								<table style="width: 100%;" role="presentation">
 									<tr class="layout_three-column">
 										<td style="width: 107px;" class="column">
-											<h3>What's trending</h3>
+											<h3 class="sans">What's trending</h3>
 											<br>
 											<p class="paragraph-2">The latest market commentary from our thought leaders.</p>
 										</td>
 										<td class="column">
-											<h4>In praise of small language models</h4>
+											<h4 class="sans">In praise of small language models</h4>
 											<br>
 											<p class="paragraph-2">The global outlook has brightened in 2024 despite some disappointing news along the way. Ronald Temple, Chief Market Strategist, analyzes the forces that stand to impact global markets as the second half of 2024 unfolds, including the results of a razor's-edge US election, China's ongoing housing challenges, and potential Eurozone policy easing.</p>											
 											<br>
@@ -325,7 +325,7 @@
 											<br>										
 										</td>
 										<td class="column">
-											<h4>In praise of small language models</h4>
+											<h4 class="sans">In praise of small language models</h4>
 											<br>
 											<p class="paragraph-2">Large language models (LLMs) are progressing at breakneck speed, captivating investors and sweeping through markets. However, their tendency to hallucinate and their inherent opacity limit their utility for investment decisions. Small language models (SLMs), in contrast, offer reliability and interpretability. These qualities make SLMs especially well-suited for answering highly specific questions, as this paper demonstrates using a case study on China's housing market slowdown.</p>
 										</td>
@@ -365,19 +365,17 @@
 								-->
 								<p class="eyebrow"><span class="bullet">&bull;</span> <span class="label">Your Team</span></p>
 								<br>
-								<h4>Investment Grade Corporate and Sovereign Yields Are Eye-Catching</h4>
+								<h3 class="sans">Investment Grade Corporate and Sovereign Yields Are Eye-Catching</h3>
 								<br>
-								<p class="paragraph-2">Emerging Markets Investment Grade Yields</p>
+								<h2 class="subheadline">Emerging Markets Investment Grade Yields</h2>
 								<br>
 								<!-- <img style src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_ContentImage_1YGraph.png" alt="1Y Grades Chart" class="mw-100" /> -->
-								<img src="https://placehold.co/543x304" alt="Feature Image" width="543px" height="auto">
+								<img src="https://placehold.co/543x304" alt="Feature Image" width="543" height="auto">
 								<p></p> <!-- Spacer <p> for MSO image margin -->
 								<br>
-								<p class="disclaimer">
-									As of 26 October 2023<br>
-									Sovereign: JPM EMBI Global Diversified IG; Corporate: JPM CEMBI Broad Diversified IG<br>
-									Source: Lazard, JP Morgan
-								</p>
+								<p class="disclaimer">As of 26 October 2023</p>
+								<p class="disclaimer">Sovereign: JPM EMBI Global Diversified IG; Corporate: JPM CEMBI Broad Diversified IG</p>
+								<p class="disclaimer">Source: Lazard, JP Morgan</p>
 							</td>
 							<td class="frame"></td>
 						</tr>
@@ -400,7 +398,7 @@
 								<table style="width: 100%;" border="0" cellpadding="8px" cellspacing="0" role="presentation" class="layout_two-column_fluid">
 									<tr>
 										<td class="column" width="100%">
-											<h3 style="width: 404px;">Explore a New Perspective on AI from Our Team</h3>
+											<h3 class="sans">Explore a New Perspective on AI from Our Team</h3>
 										</td>
 										<td class="column">
 											<!--
@@ -414,8 +412,8 @@
 													<w:anchorlock/>
 													<center class="mso">
 											<![endif]-->
-											<a target="_blank" href="https://lazard.com/" style="width: 65px" class="btn pill onyx @@variant">
-												<!--[if !mso]><!--><span><!--<![endif]-->View<!--[if !mso]><!--></span><!--<![endif]-->
+											<a target="_blank" href="https://lazard.com/" style="width: 65px;" class="btn pill onyx @@variant">
+												<!--[if !mso]><!--><span><!--<![endif]-->Visit<!--[if !mso]><!--></span><!--<![endif]-->
 											</a>
 											<!--[if mso]>
 													</center>
@@ -448,7 +446,7 @@
 				<td align="center">
 					@@include( "modules/cta-banner/two-column/templates/template.dark.html", {
 						variant: "sapphire",
-						heading: "<h2>Explore a New Perspective on AI from Our Team</h2>",
+						heading: "<h2 class='sans'>Explore a New Perspective on AI from Our Team</h2>",
 						paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
 					} )
 				</td>
