--- a/src/modules/email-banner/two-column/templates/template.dark.onyx.html
+++ b/src/modules/email-banner/two-column/templates/template.dark.onyx.html
@@ -9,7 +9,7 @@
 			<table style="width: 100%;" cellpadding="8px" role="presentation">
 				<tr class="layout_two-column">
 					<td style="margin-bottom: 16px;" class="column">
-						<h1>Factor Report</h1>
+						<h1 class="sans">Factor Report</h1>
 						<br>
 						<p>Monthly analysis of global<br/> market factors</p>
 						<br>
