--- a/src/modules/footer-disclaimer/one-column/templates/template.html
+++ b/src/modules/footer-disclaimer/one-column/templates/template.html
@@ -9,12 +9,12 @@
 			<table style="width: 100%;" cellpadding="8px" role="presentation">
 				<tr class="layout_mobile-one-column">
 					<td style="width: 54px;" class="column nowrap">
-						<a target="_blank" href="https://www.linkedin.com/company/lazard/" style="text-decoration: none;">
-							<img src="@@imgBase/linkedin_icon.png" alt="LinkedIn Logo" width="16px" height="16px">
+						<a target="_blank" href="https://{{my.Footer LinkedIn URL}}" style="text-decoration: none;">
+							<img src="@@imgBase/linkedin_icon.png" alt="LinkedIn" width="16px" height="16px">
 						</a>
 						<!-- &nbsp;&nbsp;
 						<a target="_blank" href="https://www.youtube.com/channel/UC5kvy5orZCGN55qOvoGk7ug" style="text-decoration: none;">
-							<img src="@@imgBase/yt_icon.png" alt="YouTube Logo" width="16px" height="16px">
+							<img src="@@imgBase/yt_icon.png" alt="YouTube" width="16px" height="16px">
 						</a> -->
 					</td>
 					<td class="column">
