--- a/src/modules/footer-disclaimer/two-column/templates/template.html
+++ b/src/modules/footer-disclaimer/two-column/templates/template.html
@@ -9,36 +9,36 @@
 			<table style="width: 100%;" role="presentation">
 				<tr class="layout_mobile-one-column">
 					<td style="width: 54px;" class="column nowrap">
-						<a target="_blank" href="https://www.linkedin.com/company/lazard/" style="text-decoration: none;">
-							<img src="@@imgBase/linkedin_icon.png" alt="LinkedIn Logo" width="16px" height="16px">
+						<a target="_blank" href="https://{{my.Footer LinkedIn URL}}" style="text-decoration: none;">
+							<img src="@@imgBase/linkedin_icon.png" alt="LinkedIn" width="16px" height="16px">
 						</a>
 						<!-- &nbsp;&nbsp;
 						<a target="_blank" href="https://www.youtube.com/channel/UC5kvy5orZCGN55qOvoGk7ug" style="text-decoration: none;">
-							<img src="@@imgBase/yt_icon.png" alt="YouTube Logo" width="16px" height="16px">
+							<img src="@@imgBase/yt_icon.png" alt="YouTube" width="16px" height="16px">
 						</a> -->
 					</td>
 					<td class="column">
-						<p class="paragraph-2">Lazard Asset Management, 30 Rockefeller Plaza, New York, NY 10112-6300</p>
+						<p class="disclaimer">Lazard Asset Management, 30 Rockefeller Plaza, New York, NY 10112-6300</p>
 						<br>
-						<p class="paragraph-2">For more information on Lazard Asset Management's capabilities,</p>
-						<p class="paragraph-2 margin-b-48">visit <a href="lazardassetmanagement.com" class="paragraph-2">lazardassetmanagement.com</a>.</p>
+						<p class="disclaimer">For more information on Lazard Asset Management's capabilities,</p>
+						<p class="disclaimer margin-b-48">visit <a href="lazardassetmanagement.com" class="disclaimer">lazardassetmanagement.com</a>.</p>
 
-						<p class="paragraph-3">1 The investment team's research covers the time period from January 1,1998 to December 31, 2022.</p>
-						<p class="paragraph-3">2 As measured by cash flow return on investment or return on equity.</p>
+						<p class="disclaimer">1 The investment team's research covers the time period from January 1,1998 to December 31, 2022.</p>
+						<p class="disclaimer">2 As measured by cash flow return on investment or return on equity.</p>
 						<br>
-						<p class="paragraph-2">FOR FINANCIAL PROFESSIONAL USE ONLY. NOT FOR PUBLIC DISTRIBUTION.</p>
+						<p class="disclaimer">FOR FINANCIAL PROFESSIONAL USE ONLY. NOT FOR PUBLIC DISTRIBUTION.</p>
 						<br>
 						<table style="width: 100%;" role="presentation">
 							<tr class="layout_two-column">
-								<td style="padding-left: 0px !important;" class="column">
-									<p class="paragraph-3">Information and opinions presented have been obtained or derived from sources believed by Lazard to be reliable. Lazard makes no representation as to their accuracy or completeness. All opinions expressed herein are subject to change. The S&P 500 Index is a market capitalization-weighted index of 500 companies in leading industries of the US economy. The MSCI Emerging Markets Index is a free-float-adjusted market capitalization index that is designed to measure equity market performance in the global emerging markets. The MSCI Emerging Markets Index consists of emerging markets country indices including: Brazil, Chile, China, Colombia, Czech Republic, Egypt, Greece, Hungary, India, Indonesia, Korea, Malaysia, Mexico, Peru, Philippines, Poland, Qatar, Saudi Arabia, South Africa, Taiwan, Thailand, Turkey, and United Arab Emirates. The index is unmanaged and has no fees. One cannot invest directly in an index. The MSCI World Index is a free-float-adjusted market capitalization index that is designed to measure global developed market equity performance comprised of developed market country indices. </p>
+								<td style="padding-left: 0px !important; padding-right: 16px;" class="column">
+									<p class="disclaimer">Information and opinions presented have been obtained or derived from sources believed by Lazard to be reliable. Lazard makes no representation as to their accuracy or completeness. All opinions expressed herein are subject to change. The S&P 500 Index is a market capitalization-weighted index of 500 companies in leading industries of the US economy. The MSCI Emerging Markets Index is a free-float-adjusted market capitalization index that is designed to measure equity market performance in the global emerging markets. The MSCI Emerging Markets Index consists of emerging markets country indices including: Brazil, Chile, China, Colombia, Czech Republic, Egypt, Greece, Hungary, India, Indonesia, Korea, Malaysia, Mexico, Peru, Philippines, Poland, Qatar, Saudi Arabia, South Africa, Taiwan, Thailand, Turkey, and United Arab Emirates. The index is unmanaged and has no fees. One cannot invest directly in an index. The MSCI World Index is a free-float-adjusted market capitalization index that is designed to measure global developed market equity performance comprised of developed market country indices. </p>
 								</td>
-								<td class="column">
-									<p class="paragraph-3">The index is unmanaged and has no fees. One cannot invest directly in an index.Certain information included herein is derived by Lazard in part from an MSCI index or indices (the “Index Data”). However, MSCI has not reviewed this product or report, and does not endorse or express any opinion regarding this product or report or any analysis or other information contained herein or the author or source of any such information or analysis. MSCI makes no express or implied warranties or representations and shall have no liability whatsoever with respect to any Index Data or data derived therefrom.</p>
+								<td style="padding-left: 0px !important;" class="column">
+									<p class="disclaimer">The index is unmanaged and has no fees. One cannot invest directly in an index.Certain information included herein is derived by Lazard in part from an MSCI index or indices (the “Index Data”). However, MSCI has not reviewed this product or report, and does not endorse or express any opinion regarding this product or report or any analysis or other information contained herein or the author or source of any such information or analysis. MSCI makes no express or implied warranties or representations and shall have no liability whatsoever with respect to any Index Data or data derived therefrom.</p>
 									<br>
-									<p class="paragraph-3">Read our Privacy Notice for information about how we use personal data that we hold on you</p>
+									<p class="disclaimer">Read our Privacy Notice for information about how we use personal data that we hold on you</p>
 									<br>
-									<p class="paragraph-3">To unsubscribe from future emails or customize our communications with you, manage your email preferences.</p>
+									<p class="disclaimer">To unsubscribe from future emails or customize our communications with you, manage your email preferences.</p>
 								</td>
 							</tr>
 						</table>
