--- a/src/modules/tables/basic/templates/template.html
+++ b/src/modules/tables/basic/templates/template.html
@@ -8,7 +8,7 @@
 		<td class="content">
 			<p class="eyebrow"><span class="bullet">&bull;</span> <span class="label">What's Trending</span></p>
 			<br>
-			<h4>Top 3 highlights from May 2024.</h4>
+			<h4 class="sans">Top 3 highlights from May 2024.</h4>
 			<br>
 			<p class="paragraph-3">Top 3 highlights from May 2024.</p>
 			<br>
