--- a/src/modules/tables/thumbnail/templates/template.html
+++ b/src/modules/tables/thumbnail/templates/template.html
@@ -8,7 +8,7 @@
 		<td class="content">
 			<p class="eyebrow"><span class="bullet">&bull;</span> <span class="label">What's Trending</span></p>
 			<br>
-			<h4>Top 3 highlights from May 2024.</h4>
+			<h4 class="sans">Top 3 highlights from May 2024.</h4>
 			<br>
 			<p class="paragraph-3">Top 3 highlights from May 2024.</p>
 			<br>
@@ -19,7 +19,7 @@
 						<img src="https://placehold.co/54x74" alt="Table Thumbnail" width="54px" height="74px">
 					</td>
 					<td>
-						<h4>Annual Sustainable <br> Investment Report</h4>
+						<h4 class="sans" style="width: 165px;">Annual Sustainable Investment Report</h4>
 						<br>
 						<p>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
 						<br>
@@ -36,7 +36,7 @@
 						<img src="https://placehold.co/54x74" alt="Table Thumbnail" width="54px" height="74px">
 					</td>
 					<td>
-						<h4>Annual Sustainable <br> Investment Report</h4>
+						<h4 class="sans" style="width: 165px;">Annual Sustainable Investment Report</h4>
 						<br>
 						<p>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
 						<br>
@@ -53,7 +53,7 @@
 						<img src="https://placehold.co/54x74" alt="Table Thumbnail" width="54px" height="74px">
 					</td>
 					<td>
-						<h4>Annual Sustainable <br> Investment Report</h4>
+						<h4 class="sans" style="width: 165px;">Annual Sustainable Investment Report</h4>
 						<br>
 						<p>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
 						<br>
@@ -70,7 +70,7 @@
 						<img src="https://placehold.co/54x74" alt="Table Thumbnail" width="54px" height="74px">
 					</td>
 					<td>
-						<h4>Annual Sustainable <br> Investment Report</h4>
+						<h4 class="sans" style="width: 165px;">Annual Sustainable Investment Report</h4>
 						<br>
 						<p>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
 						<br>
@@ -87,7 +87,7 @@
 						<img src="https://placehold.co/54x74" alt="Table Thumbnail" width="54px" height="74px">
 					</td>
 					<td>
-						<h4>Annual Sustainable <br> Investment Report</h4>
+						<h4 class="sans" style="width: 165px;">Annual Sustainable Investment Report</h4>
 						<br>
 						<p>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
 						<br>
@@ -104,7 +104,7 @@
 						<img src="https://placehold.co/54x74" alt="Table Thumbnail" width="54px" height="74px">
 					</td>
 					<td>
-						<h4>Annual Sustainable <br> Investment Report</h4>
+						<h4 class="sans" style="width: 165px;">Annual Sustainable Investment Report</h4>
 						<br>
 						<p>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
 						<br>
