--- a/src/modules/two-column-contents/image-left/templates/template.dark.onyx.html
+++ b/src/modules/two-column-contents/image-left/templates/template.dark.onyx.html
@@ -15,11 +15,9 @@
 						<img src="https://placehold.co/264x142" alt="Feature image" width="264px" height="142px">
 						<p></p> <!-- Spacer <p> for MSO image margin -->
 						<br>
-						<p class="caption">
-							As of 26 October 2023 <br>
-							Sovereign: JPM EMBI Global Diversified IG; Corporate: JPM CEMBI Broad Diversified IG <br>
-							Source: Lazard, JP Morgan
-						</p>
+						<p class="disclaimer">As of 26 October 2023</p>
+						<p class="disclaimer">Sovereign: JPM EMBI Global Diversified IG; Corporate: JPM CEMBI Broad Diversified IG</p>
+						<p class="disclaimer">Source: Lazard, JP Morgan</p>
 					</td>
 					<td style class="column">
 						<h4>Do Rising US Interest Rates Offer Opportunities in EM?</h4>
@@ -29,7 +27,11 @@
 						<p class="paragraph-2">Rising US interest rates--and soaring Treasury yields--have done their part to rattle global economics. As the environment settles, we expect growth differentials to shift, creating a more positive backdrop for emerging markets debt and interesting investment opportunities for the asset class across the capital structure.Rising US interest rates--and soaring Treasury yields--have done their part to rattle global economics. As the environment settles, we expect growth differentials to shift, creating a more positive backdrop for emerging markets debt and interesting investment opportunities for the asset class across the capital structure.</p>
 						<br>
 						
-						<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a target="_blank" href="https://lazard.com" class="link-2">Lazard US Offshore Fund Offerings</a></p>
+						<div class="mso_list">
+							<ul class="g_list" style="" align="left" type="disc">
+									<li class="link-2"><a target="_blank" href="https://lazard.com">Lazard US Offshore Fund Offerings</a></li>
+							</ul>
+						</div>
 						<br>
 						
 						@@include("components/buttons/pills/templates/template.msoDark.primary.onyx.html", {
