Addressed some of Leo's feedback, need to update the sample templates

--- a/src/components/components.html
+++ b/src/components/components.html
@@ -42,11 +42,11 @@
 
 						<tr>
 							<td>
-								<h1 class="subheadline">Headline 1</h1>
+								<h1 class="subheadline">Subheadline 1</h1>
 								<br>
-								<h2 class="subheadline">Headline 2</h2>
+								<h2 class="subheadline">Subheadline 2</h2>
 								<br>
-								<h3 class="subheadline">Headline 3</h3>
+								<h3 class="subheadline">Subheadline 3</h3>
 							</td>
 						</tr>
 
@@ -158,7 +158,7 @@
 							<td>
 								@@include("components/buttons/pills/templates/template.primary.sapphire.html", {
 									label: "Sapphire Large Primary",
-									width: "198px",
+									width: "100%",
 									variant: ""
 								})
 							</td>
@@ -168,7 +168,7 @@
 							<td class="dark">
 								@@include("components/buttons/pills/templates/template.msoDark.primary.sapphire.html", {
 									label: "Reversed Sapphire Large Primary",
-									width: "250px",
+									width: "100%",
 									variant: ""
 								})
 							</td>
@@ -178,7 +178,7 @@
 							<td>
 								@@include("components/buttons/pills/templates/template.secondary.sapphire.html", {
 									label: "Sapphire Large Secondary",
-									width: "198px",
+									width: "100%",
 									variant: ""
 								})
 							</td>
@@ -188,7 +188,7 @@
 							<td class="dark">
 								@@include("components/buttons/pills/templates/template.msoDark.secondary.sapphire.html", {
 									label: "Reversed Sapphire Large Secondary",
-									width: "250px",
+									width: "100%",
 									variant: ""
 								})
 							</td>
@@ -199,7 +199,7 @@
 							<td>
 								@@include("components/buttons/pills/templates/template.primary.sapphire.html", {
 									label: "Sapphire Small Primary",
-									width: "198px",
+									width: "100%",
 									variant: "small"
 								})
 							</td>
@@ -209,7 +209,7 @@
 							<td class="dark">
 								@@include("components/buttons/pills/templates/template.msoDark.primary.sapphire.html", {
 									label: "Reversed Sapphire Small Primary",
-									width: "250px",
+									width: "100%",
 									variant: "small"
 								})
 							</td>
@@ -219,7 +219,7 @@
 							<td>
 								@@include("components/buttons/pills/templates/template.secondary.sapphire.html", {
 									label: "Sapphire Small Secondary",
-									width: "198px",
+									width: "100%",
 									variant: "small"
 								})
 							</td>
@@ -229,7 +229,7 @@
 							<td class="dark">
 								@@include("components/buttons/pills/templates/template.msoDark.secondary.sapphire.html", {
 									label: "Reversed Sapphire Small Secondary",
-									width: "250px",
+									width: "100%",
 									variant: "small"
 								})
 							</td>
@@ -240,7 +240,7 @@
 							<td>
 								@@include("components/buttons/pills/templates/template.primary.onyx.html", {
 									label: "Onyx Large Primary",
-									width: "198px",
+									width: "100%",
 									variant: ""
 								})
 							</td>
@@ -250,7 +250,7 @@
 							<td class="dark">
 								@@include("components/buttons/pills/templates/template.msoDark.primary.onyx.html", {
 									label: "Reversed Onyx Large Primary",
-									width: "250px",
+									width: "100%",
 									variant: ""
 								})
 							</td>
@@ -260,7 +260,7 @@
 							<td>
 								@@include("components/buttons/pills/templates/template.secondary.onyx.html", {
 									label: "Onyx Large Secondary",
-									width: "198px",
+									width: "100%",
 									variant: ""
 								})
 							</td>
@@ -270,7 +270,7 @@
 							<td class="dark">
 								@@include("components/buttons/pills/templates/template.msoDark.secondary.onyx.html", {
 									label: "Reversed Onyx Large Secondary",
-									width: "250px",
+									width: "100%",
 									variant: ""
 								})
 							</td>
@@ -281,7 +281,7 @@
 							<td>
 								@@include("components/buttons/pills/templates/template.primary.onyx.html", {
 									label: "Onyx Small Primary",
-									width: "198px",
+									width: "100%",
 									variant: "small"
 								})
 							</td>
@@ -291,7 +291,7 @@
 							<td class="dark">
 								@@include("components/buttons/pills/templates/template.msoDark.primary.onyx.html", {
 									label: "Reversed Onyx Small Primary",
-									width: "250px",
+									width: "100%",
 									variant: "small"
 								})
 							</td>
@@ -301,7 +301,7 @@
 							<td>
 								@@include("components/buttons/pills/templates/template.secondary.onyx.html", {
 									label: "Onyx Small Secondary",
-									width: "198px",
+									width: "100%",
 									variant: "small"
 								})
 							</td>
@@ -311,7 +311,7 @@
 							<td class="dark">
 								@@include("components/buttons/pills/templates/template.msoDark.secondary.onyx.html", {
 									label: "Reversed Onyx Small Secondary",
-									width: "250px",
+									width: "100%",
 									variant: "small"
 								})
 							</td>
