--- a/src/modules/email-banner/one-column/templates/template.html
+++ b/src/modules/email-banner/one-column/templates/template.html
@@ -7,7 +7,7 @@
 		<td class="frame"></td>
 		<td class="content v-flush">
 			<!-- <img style="width: 100%; height: auto;" src="@@imgBase/@@imgSrc" alt="Banner Image" /> -->
-			<img src="https://placehold.co/576x140" alt="Banner Image" width="100%" height="auto" />
+			<img src="https://placehold.co/542x132" alt="Banner Image" width="542px" height="132px" />
 		</td>
 		<td class="frame"></td>
 	</tr>
