--- a/src/modules/email-banner/two-column/templates/template.html
+++ b/src/modules/email-banner/two-column/templates/template.html
@@ -16,12 +16,12 @@
 
 						@@include("components/buttons/pills/templates/template.primary.sapphire.html", {
 							label: "Download",
-							width: "98px"
+							width: "100%"
 						})
 					</td>
 					<td class="column">
 						<!-- <img src="@@imgBase/@@imgSrc" alt="Feature image"> -->
-						<img src="https://placehold.co/264x148" alt="Feature image" width="264px" height="148px">
+						<img src="https://placehold.co/264x148" alt="Feature image" width="264px">
 					</td>
 				</tr>
 			</table>
