--- a/src/modules/email-banner/two-column/templates/template.onyx.html
+++ b/src/modules/email-banner/two-column/templates/template.onyx.html
@@ -16,7 +16,7 @@
 
 						@@include("components/buttons/pills/templates/template.primary.onyx.html", {
 							label: "Download",
-							width: "98px"
+							width: "100%"
 						})
 					</td>
 					<td class="column">
