--- a/src/templates/fixed-income-viewpoint.html
+++ b/src/templates/fixed-income-viewpoint.html
@@ -46,10 +46,10 @@
 							<td class="content h-flush">
 								<table style border="0" cellpadding="8px" cellspacing="0" role="presentation" width="100%" class="layout_two-column_fluid">
 									<tr>
-										<td class="column" width="100%">
-											<h1 class="sans" style="width: 263px;">Fixed Income Viewpoints</h1>
+										<td class="column" style="width: 404px;">
+											<h1 class="sans">Fixed Income Viewpoints</h1>
 										</td>
-										<td class="column">
+										<td class="column align-right-md">
 											<!--
 												Component: Pill Button
 												Variant: Primary, Onyx
@@ -122,10 +122,10 @@
 							<td class="content h-flush">
 								<table style="width: 100%;" border="0" cellpadding="8px" cellspacing="0" role="presentation" class="layout_two-column_fluid">
 									<tr>
-										<td class="column" width="100%">
+										<td class="column" style="width: 404px;">
 											<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
 										</td>
-										<td class="column">
+										<td class="column align-right-md">
 											<!--
 												Component: Pill Button
 												Variant: Primary, Onyx
