--- a/src/modules/three-column-contents/speaker/templates/template.html
+++ b/src/modules/three-column-contents/speaker/templates/template.html
@@ -13,7 +13,7 @@
 						<img src="https://placehold.co/124x124" alt="Bio Image" width="124px">
 					</td>
 					<td class="column">
-						<h3>@@name</h3>
+						<h3 class="sans">@@name</h3>
 						<br>
 						<h3 class="subheadline">Director, Head of US Offshore and Latin America Distribution</h3>
 						<br>
