--- a/src/templates/test.html
+++ b/src/templates/test.html
@@ -33,96 +33,25 @@
 
 			<tr>
 				<td align="center">
-					<!--
-						Module: One Column Contents
-						Variant: parchment, sapphire buttons
-					-->
-					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module parchment">
-						<tr>
-							<td class="frame"></td>
-							<td class="content">
-								<!--
-									Component: Eyebrow
-								-->
-								<p class="eyebrow"><span class="bullet">&bull;</span> <span class="label">What's Trending</span></p>
-								<br>
-								<h3>Do Rising US Interest Rates Offer Opportunities in EM?</h3>
-								<br>
-								<h2 class="subheadline">Emerging Markets Investment Grade Yields</h2>
-								<br>
-								<!-- <img style src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_ContentImage_1YGraph.png" alt="1Y Grades Chart" class="mw-100" /> -->
-								<img src="https://placehold.co/543x304" alt="Feature Image" width="100%" height="auto">
-								<p></p> <!-- Spacer <p> for MSO image margin -->
-								<br>
-								<p class="disclaimer">
-									As of 26 October 2023<br>
-									Sovereign: JPM EMBI Global Diversified IG; Corporate: JPM CEMBI Broad Diversified IG<br>
-									Source: Lazard, JP Morgan
-								</p>
-								<br>
-								<p class="paragraph-2">Rising US interest rates--and soaring Treasury yields--have done their part to rattle global economics. As the environment settles, we expect growth differentials to shift, creating a more positive backdrop for emerging markets debt and interesting investment opportunities for the asset class across the capital structure.</p>
-								<br>
+					@@include( "modules/two-column-contents/speaker/templates/template.html", {
+						variant: "parchment",
+						imgSrc: "LAM_Bio_2.png",
+						name: "First, Last Name",
+						email: "eduardo.mora@lazard.com",
+						phone: "+1 212 632 1325"
+					} )
+				</td>
+			</tr>
 
-								<div class="mso_list">
-									<ul class="g_list" style="" align="left" type="disc">
-											<li class="link-2"><a target="_blank" href="https://lazard.com">Outlook on Emerging Markets</a></li>
-											<li class="link-2"><a target="_blank" href="https://lazard.com">Outlook on Europe</a></li>
-											<li class="link-2"><a target="_blank" href="https://lazard.com">Outlook on Japan</a></li>
-											<li class="link-2"><a target="_blank" href="https://lazard.com">Outlook on the United Kingdom</a></li>
-									</ul>
-								</div>
-								<br>
-			
-								<!--
-									Component: Button
-									Variant: Pill, Primary, Large
-								-->
-								<!--
-									Component: Pill Button
-									Variant: Primary, Sapphire
-								-->
-								<!--[if mso]>
-									<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
-										style="height:32px;v-text-anchor:middle;color:#ffffff;width:128px;" 
-										fillcolor="#00539A">
-										<w:anchorlock/>
-										<center class="mso">
-								<![endif]-->
-								<a target="_blank" href="https://lazard.com/" style="width: 128px" class="btn pill @@variant">
-									<!--[if !mso]><!--><span><!--<![endif]-->Primary Button<!--[if !mso]><!--></span><!--<![endif]-->
-								</a>
-								<!--[if mso]>
-										</center>
-									</v:roundrect>
-								<![endif]-->
-								&nbsp;&nbsp;
-			
-								<!--
-									Component: Button
-									Variant: Pill, Secondary, Large
-								-->
-								<!--
-									Component: Pill Button
-									Variant: Secondary, Sapphire
-								-->
-								<!--[if mso]>
-									<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" fill="f"
-										style="height:32px;v-text-anchor:middle;color:#00539A;width:194px;"
-										strokecolor="#00539A">
-										<w:anchorlock/>
-										<center>
-								<![endif]-->
-								<a target="_blank" href="https://lazard.com/" style="width: 194px" class="btn pill secondary @@variant">
-									<!--[if !mso]><!--><span><!--<![endif]-->Sapphire Secondary Button<!--[if !mso]><!--></span><!--<![endif]-->
-								</a>
-								<!--[if mso]>
-										</center>
-									</v:roundrect>
-								<![endif]-->
-							</td>
-							<td class="frame"></td>
-						</tr>
-					</table>
+			<tr>
+				<td align="center">
+					@@include( "modules/three-column-contents/speaker/templates/template.html", {
+						variant: "sage",
+						imgSrc: "LAM_Bio_2.png",
+						name: "Last, First Name",
+						phone: "1 212 632 1325",
+						email: "eduardo.mora@lazard.com"
+					} )
 				</td>
 			</tr>
 
